[gd_scene load_steps=18 format=4 uid="uid://bes6te6dubcch"]

[ext_resource type="Script" uid="uid://b2eex0cx7l5sm" path="res://scenes/stages/stage.gd" id="1_2fmbe"]
[ext_resource type="TileSet" uid="uid://bglohi0dt4uvq" path="res://tilesets/test_stage.tres" id="2_mckyc"]
[ext_resource type="AudioStream" uid="uid://dafwctwcprydn" path="res://audio/music/Stage Select.ogg" id="3_2sjvs"]
[ext_resource type="AudioStream" uid="uid://c80tsa2fn61wv" path="res://audio/music/Fortress Boss.mp3" id="4_1x6wb"]
[ext_resource type="Texture2D" uid="uid://dbwlbcnwmhpph" path="res://shaders/palettes/water/refightshark.png" id="4_anv4o"]
[ext_resource type="Texture2D" uid="uid://fklfu5btisd3" path="res://shaders/palettes/water/noeffect.png" id="5_t1u80"]
[ext_resource type="PackedScene" uid="uid://bingbkdyjdsbs" path="res://scenes/objects/players/start_position.tscn" id="5_wjigj"]
[ext_resource type="PackedScene" uid="uid://gp63stnmpat1" path="res://scenes/objects/bosses/boss_spawner.tscn" id="6_10bhk"]
[ext_resource type="PackedScene" uid="uid://el66rgn1gkh3" path="res://scenes/objects/level_objects/teleporter.tscn" id="8_2jsra"]
[ext_resource type="TileSet" uid="uid://bp0hrrsh7jne5" path="res://tilesets/layout.tres" id="9_c1wtk"]
[ext_resource type="PackedScene" uid="uid://mi0hw7tknuco" path="res://scenes/objects/level_objects/spike.tscn" id="11_4ox8e"]

[sub_resource type="GDScript" id="GDScript_fs1w8"]
script/source = "extends Node2D


var timer : int
var freq = 0.03
var amplitude = 0.08
var v = Vector2(0, 25)
var level

var scroll1 = Vector2(0,0)

# Called when the node enters the scene tree for the first time.
func _ready():
	GameState.camposy = 0
	level = position.y + 3
	$Water/CanvasLayer/Shade.position.y = level + 50

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _physics_process(_delta):
	if GameState.camposy < 300:
		if $Timer.is_stopped():
			if GameState.freezeframe == false:
				timer += 1
				$Timer.start(0.02)
		
		if GameState.freezeframe == false:
			v.y = (cos(timer * freq) * amplitude)
	
			$Water.position.y += v.y
	
	level = $Water.position.y + 3
	
	
func _process(_delta):
	if GameState.scrollX1 == 0 and GameState.scrollY1 == 1:
		$Water/CanvasLayer/Shade.visible = true
	else:
		$Water/CanvasLayer/Shade.visible = false
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sllkx"]
size = Vector2(373.745, 146)

[sub_resource type="Shader" id="Shader_0ixp5"]
code = "shader_type canvas_item;
// NOTE: palette sizes has to be to the power of 2
uniform float amount : hint_range(1,514,1);
uniform sampler2D originalPalette : filter_nearest;
uniform sampler2D swapPalette : filter_nearest;

uniform sampler2D SCREEN_TEXTURE : hint_screen_texture, filter_nearest;

void fragment(){
	vec4 screen = textureLod(SCREEN_TEXTURE, SCREEN_UV, 0.0);
	
	vec3 color = screen.rgb;
	vec3 pal = texture(originalPalette,vec2(0,0)).rgb;
	vec3 swap_pal = texture(originalPalette,vec2(0,0)).rgb;
	vec3 new_color = pal;
	vec3 remap_color = pal;
	
	for (float i = 0.0; i<=amount; i++){
		pal = texture(originalPalette,vec2(i/amount,0)).rgb;
		swap_pal = texture(swapPalette,vec2(i/amount,0)).rgb;
		
		if (distance(pal, color) <= distance(new_color, color)) {
		new_color = pal;
		remap_color = swap_pal;
			
		}
	}
	
	COLOR.rgb = remap_color;
	COLOR.a  = texture(TEXTURE,UV).a;
	
	//COLOR = screen.rgba;
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_72db6"]
shader = SubResource("Shader_0ixp5")
shader_parameter/amount = 514.0
shader_parameter/originalPalette = ExtResource("5_t1u80")
shader_parameter/swapPalette = ExtResource("4_anv4o")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2yds"]
size = Vector2(365, 188)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1x6wb"]
size = Vector2(326, 28)

[node name="BossTester" type="Node2D"]
script = ExtResource("1_2fmbe")
action = 1
C1scrollX1 = 1
C1scrollX2 = 1
C1scrollY1 = 1
C1scrollY2 = 1

[node name="LevelShit" type="Node2D" parent="."]
script = SubResource("GDScript_fs1w8")

[node name="Bossmusic" type="AudioStreamPlayer" parent="LevelShit"]
stream = ExtResource("4_1x6wb")
volume_db = -10.0
bus = &"Music"
parameters/looping = true

[node name="Timer" type="Timer" parent="LevelShit"]
wait_time = 0.05
one_shot = true
autostart = true

[node name="Water" type="Node2D" parent="LevelShit"]
position = Vector2(0, -8)

[node name="Foreground2" type="TileMapLayer" parent="LevelShit/Water"]
y_sort_enabled = true
texture_filter = 1
use_parent_material = true
position = Vector2(0, 8)
tile_map_data = PackedByteArray("AAAAABIAAAAEAAQAAAABABIAAAAFAAQAAAACABIAAAAGAAQAAAADABIAAAAHAAQAAAAEABIAAAAEAAQAAAAFABIAAAAFAAQAAAAGABIAAAAGAAQAAAAHABIAAAAHAAQAAAAIABIAAAAEAAQAAAAJABIAAAAFAAQAAAAKABIAAAAGAAQAAAALABIAAAAHAAQAAAAMABIAAAAEAAQAAAANABIAAAAFAAQAAAAOABIAAAAGAAQAAAAPABIAAAAHAAQAAAAQABIAAAAEAAQAAAARABIAAAAFAAQAAAASABIAAAAGAAQAAAATABIAAAAHAAQAAAAUABIAAAAEAAQAAAAVABIAAAAFAAQAAAAWABIAAAAGAAQAAAAXABIAAAAHAAQAAAA=")
tile_set = ExtResource("2_mckyc")

[node name="SplashZone" type="Area2D" parent="LevelShit/Water" groups=["splash"]]
position = Vector2(2000, -608)
collision_layer = 14
collision_mask = 14
gravity_space_override = 3
gravity = 400.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelShit/Water/SplashZone"]
position = Vector2(-1825.87, 981)
shape = SubResource("RectangleShape2D_sllkx")

[node name="CanvasLayer" type="CanvasLayer" parent="LevelShit/Water"]
layer = 40

[node name="Shade" type="ColorRect" parent="LevelShit/Water/CanvasLayer"]
visibility_layer = 31
z_index = 250
material = SubResource("ShaderMaterial_72db6")
offset_top = 299.0
offset_right = 390.0
offset_bottom = 472.0
mouse_filter = 2
color = Color(0, 0.439216, 1, 1)

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = -1600
limit_right = 90000
limit_bottom = 1152

[node name="Parallax2D" type="Parallax2D" parent="."]
scroll_scale = Vector2(0.75, 0.75)
repeat_size = Vector2(256, 176)
repeat_times = 3

[node name="BG" type="TileMapLayer" parent="Parallax2D"]
tile_map_data = PackedByteArray("AAAAAAAAAAABAAMAAAAAAAEAAAABAAQAAAAAAAIAAAABAAQAAAAAAAMAAAABAAQAAAAAAAQAAAABAAQAAAAAAAUAAAABAAQAAAAAAAYAAAABAAQAAAAAAAcAAAABAAQAAAAAAAgAAAABAAQAAAAAAAkAAAABAAQAAAAAAAoAAAABAAQAAAABAAAAAAABAAYAAAABAAEAAAABAAYAAAABAAIAAAABAAYAAAABAAMAAAABAAYAAAABAAQAAAABAAYAAAABAAUAAAABAAYAAAABAAYAAAABAAYAAAABAAcAAAABAAYAAAABAAgAAAABAAYAAAABAAkAAAABAAYAAAABAAoAAAABAAYAAAACAAoAAAABAAUAAAACAAkAAAABAAUAAAACAAgAAAABAAUAAAACAAcAAAABAAUAAAACAAYAAAABAAUAAAACAAUAAAABAAUAAAACAAQAAAABAAUAAAACAAMAAAABAAUAAAACAAIAAAABAAUAAAACAAEAAAABAAUAAAACAAAAAAABAAUAAAADAAAAAAABAAUAAAADAAEAAAABAAUAAAADAAIAAAABAAUAAAADAAMAAAABAAUAAAADAAQAAAABAAUAAAADAAUAAAABAAUAAAADAAYAAAABAAUAAAADAAcAAAABAAUAAAADAAgAAAABAAUAAAADAAkAAAABAAUAAAADAAoAAAABAAUAAAAEAAAAAAABAAMAAAAIAAAAAAABAAMAAAAMAAAAAAABAAMAAAAEAAEAAAABAAQAAAAEAAIAAAABAAQAAAAEAAMAAAABAAQAAAAEAAQAAAABAAQAAAAEAAUAAAABAAQAAAAEAAYAAAABAAQAAAAEAAcAAAABAAQAAAAEAAgAAAABAAQAAAAEAAkAAAABAAQAAAAEAAoAAAABAAQAAAAIAAoAAAABAAQAAAAIAAkAAAABAAQAAAAIAAgAAAABAAQAAAAIAAcAAAABAAQAAAAIAAYAAAABAAQAAAAIAAUAAAABAAQAAAAIAAQAAAABAAQAAAAIAAMAAAABAAQAAAAIAAIAAAABAAQAAAAIAAEAAAABAAQAAAAMAAEAAAABAAQAAAAMAAIAAAABAAQAAAAMAAMAAAABAAQAAAAMAAQAAAABAAQAAAAMAAUAAAABAAQAAAAMAAYAAAABAAQAAAAMAAcAAAABAAQAAAAMAAgAAAABAAQAAAAMAAkAAAABAAQAAAAMAAoAAAABAAQAAAAFAAAAAAABAAYAAAAFAAEAAAABAAYAAAAFAAIAAAABAAYAAAAFAAMAAAABAAYAAAAFAAQAAAABAAYAAAAFAAUAAAABAAYAAAAFAAYAAAABAAYAAAAFAAcAAAABAAYAAAAFAAgAAAABAAYAAAAFAAkAAAABAAYAAAAFAAoAAAABAAYAAAAJAAAAAAABAAYAAAAJAAEAAAABAAYAAAAJAAIAAAABAAYAAAAJAAMAAAABAAYAAAAJAAQAAAABAAYAAAAJAAUAAAABAAYAAAAJAAYAAAABAAYAAAAJAAcAAAABAAYAAAAJAAgAAAABAAYAAAAJAAkAAAABAAYAAAAJAAoAAAABAAYAAAANAAAAAAABAAYAAAANAAEAAAABAAYAAAANAAIAAAABAAYAAAANAAMAAAABAAYAAAANAAQAAAABAAYAAAANAAUAAAABAAYAAAANAAYAAAABAAYAAAANAAcAAAABAAYAAAANAAgAAAABAAYAAAANAAkAAAABAAYAAAANAAoAAAABAAYAAAAOAAAAAAABAAUAAAAOAAEAAAABAAUAAAAOAAIAAAABAAUAAAAOAAMAAAABAAUAAAAOAAQAAAABAAUAAAAOAAUAAAABAAUAAAAOAAYAAAABAAUAAAAOAAcAAAABAAUAAAAOAAgAAAABAAUAAAAOAAkAAAABAAUAAAAOAAoAAAABAAUAAAAPAAAAAAABAAUAAAAPAAEAAAABAAUAAAAPAAIAAAABAAUAAAAPAAMAAAABAAUAAAAPAAQAAAABAAUAAAAPAAUAAAABAAUAAAAPAAYAAAABAAUAAAAPAAcAAAABAAUAAAAPAAgAAAABAAUAAAAPAAkAAAABAAUAAAAPAAoAAAABAAUAAAAKAAAAAAABAAUAAAAKAAEAAAABAAUAAAAKAAIAAAABAAUAAAAKAAMAAAABAAUAAAAKAAQAAAABAAUAAAAKAAUAAAABAAUAAAAKAAYAAAABAAUAAAAKAAcAAAABAAUAAAAKAAgAAAABAAUAAAAKAAkAAAABAAUAAAAKAAoAAAABAAUAAAALAAAAAAABAAUAAAALAAEAAAABAAUAAAALAAIAAAABAAUAAAALAAMAAAABAAUAAAALAAQAAAABAAUAAAALAAUAAAABAAUAAAALAAYAAAABAAUAAAALAAcAAAABAAUAAAALAAgAAAABAAUAAAALAAkAAAABAAUAAAALAAoAAAABAAUAAAAGAAAAAAABAAUAAAAGAAEAAAABAAUAAAAGAAIAAAABAAUAAAAGAAMAAAABAAUAAAAGAAQAAAABAAUAAAAGAAUAAAABAAUAAAAGAAYAAAABAAUAAAAGAAcAAAABAAUAAAAGAAgAAAABAAUAAAAGAAkAAAABAAUAAAAGAAoAAAABAAUAAAAHAAAAAAABAAUAAAAHAAEAAAABAAUAAAAHAAIAAAABAAUAAAAHAAMAAAABAAUAAAAHAAQAAAABAAUAAAAHAAUAAAABAAUAAAAHAAYAAAABAAUAAAAHAAcAAAABAAUAAAAHAAgAAAABAAUAAAAHAAkAAAABAAUAAAAHAAoAAAABAAUAAAA=")
tile_set = ExtResource("2_mckyc")

[node name="Foreground" type="TileMapLayer" parent="."]
y_sort_enabled = true
texture_filter = 1
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAAEAAAAAAAUAAAAAAAIAAAAAAAUAAAABAAEAAAAAAAUAAAABAAIAAAAAAAUAAAACAAEAAAAAAAUAAAADAAEAAAAAAAUAAAAEAAEAAAAAAAUAAAAFAAEAAAAAAAUAAAAGAAEAAAAAAAUAAAAHAAEAAAAAAAUAAAAIAAEAAAAAAAUAAAAJAAEAAAAAAAUAAAAKAAEAAAAAAAUAAAALAAEAAAAAAAUAAAAMAAEAAAAAAAUAAAANAAEAAAAAAAUAAAAOAAEAAAAAAAUAAAAPAAEAAAAAAAUAAAAQAAEAAAAAAAUAAAARAAEAAAAAAAUAAAASAAEAAAAAAAUAAAATAAEAAAAAAAUAAAAUAAEAAAAAAAUAAAAVAAEAAAAAAAUAAAAWAAEAAAAAAAUAAAAXAAEAAAAAAAUAAAAXAAIAAAAAAAUAAAAYAAEAAAAAAAUAAAAYAAIAAAAAAAUAAAAZAAEAAAAAAAUAAAAaAAEAAAAAAAUAAAAbAAEAAAAAAAUAAAAcAAEAAAAAAAUAAAAdAAEAAAAAAAUAAAAeAAEAAAAAAAUAAAAfAAAAAAAAAAUAAAAfAAEAAAAAAAUAAAAgAAAAAAAAAAUAAAAgAAEAAAAAAAUAAAAAAAAAAAAAAAUAAAAAAAMAAAAAAAUAAAAAAAQAAAAAAAUAAAAAAAUAAAAAAAUAAAAAAAYAAAAAAAUAAAAAAAcAAAAAAAUAAAAAAAgAAAAAAAUAAAAAAAkAAAAAAAUAAAAAAAoAAAAAAAUAAAAAAAsAAAAAAAUAAAAAAAwAAAAAAAUAAAAAAA0AAAAAAAUAAAABAAAAAAAAAAUAAAABAAMAAAAAAAUAAAABAAQAAAAAAAUAAAABAAUAAAAAAAUAAAABAAYAAAAAAAUAAAABAAcAAAAAAAUAAAABAAgAAAAAAAUAAAABAAkAAAAAAAUAAAABAAoAAAAAAAUAAAABAAsAAAAAAAUAAAABAAwAAAAAAAUAAAABAA0AAAAAAAUAAAACAAAAAAAAAAUAAAACAAwAAAAAAAUAAAACAA0AAAAAAAUAAAADAAAAAAAAAAUAAAADAAwAAAAAAAUAAAADAA0AAAAAAAUAAAAEAAAAAAAAAAUAAAAEAAwAAAAAAAUAAAAEAA0AAAAAAAUAAAAFAAAAAAAAAAUAAAAFAAwAAAAAAAUAAAAFAA0AAAAAAAUAAAAGAAAAAAAAAAUAAAAGAAwAAAAAAAUAAAAGAA0AAAAAAAUAAAAHAAAAAAAAAAUAAAAHAAwAAAAAAAUAAAAHAA0AAAAAAAUAAAAIAAAAAAAAAAUAAAAIAAwAAAAAAAUAAAAIAA0AAAAAAAUAAAAJAAAAAAAAAAUAAAAJAAwAAAAAAAUAAAAJAA0AAAAAAAUAAAAKAAAAAAAAAAUAAAALAAAAAAAAAAUAAAAMAAAAAAAAAAUAAAANAAAAAAAAAAUAAAAOAAAAAAAAAAUAAAAOAAwAAAAAAAUAAAAOAA0AAAAAAAUAAAAPAAAAAAAAAAUAAAAPAAwAAAAAAAUAAAAPAA0AAAAAAAUAAAAQAAAAAAAAAAUAAAAQAAwAAAAAAAUAAAAQAA0AAAAAAAUAAAARAAAAAAAAAAUAAAARAAwAAAAAAAUAAAARAA0AAAAAAAUAAAASAAAAAAAAAAUAAAASAAwAAAAAAAUAAAASAA0AAAAAAAUAAAATAAAAAAAAAAUAAAATAAwAAAAAAAUAAAATAA0AAAAAAAUAAAAUAAAAAAAAAAUAAAAUAAwAAAAAAAUAAAAUAA0AAAAAAAUAAAAVAAAAAAAAAAUAAAAVAAwAAAAAAAUAAAAVAA0AAAAAAAUAAAAWAAAAAAAAAAUAAAAWAAwAAAAAAAUAAAAWAA0AAAAAAAUAAAAXAAAAAAAAAAUAAAAXAAMAAAAAAAUAAAAXAAQAAAAAAAUAAAAXAAUAAAAAAAUAAAAXAAYAAAAAAAUAAAAXAAcAAAAAAAUAAAAXAAwAAAAAAAUAAAAXAA0AAAAAAAUAAAAYAAAAAAAAAAUAAAAYAAMAAAAAAAUAAAAYAAQAAAAAAAUAAAAYAAUAAAAAAAUAAAAYAAYAAAAAAAUAAAAYAAcAAAAAAAUAAAAYAAwAAAAAAAUAAAAYAA0AAAAAAAUAAAAZAAAAAAAAAAUAAAAZAAwAAAAAAAUAAAAZAA0AAAAAAAUAAAAaAAAAAAAAAAUAAAAaAAwAAAAAAAUAAAAaAA0AAAAAAAUAAAAbAAAAAAAAAAUAAAAbAAwAAAAAAAUAAAAbAA0AAAAAAAUAAAAcAAAAAAAAAAUAAAAcAAwAAAAAAAUAAAAcAA0AAAAAAAUAAAAdAAAAAAAAAAUAAAAdAAwAAAAAAAUAAAAdAA0AAAAAAAUAAAAeAAAAAAAAAAUAAAAeAAwAAAAAAAUAAAAeAA0AAAAAAAUAAAAfAAwAAAAAAAUAAAAfAA0AAAAAAAUAAAAgAAwAAAAAAAUAAAAgAA0AAAAAAAUAAAAhAAAAAAAAAAUAAAAhAAEAAAAAAAUAAAAhAAwAAAAAAAUAAAAhAA0AAAAAAAUAAAAiAAAAAAAAAAUAAAAiAAEAAAAAAAUAAAAiAAwAAAAAAAUAAAAiAA0AAAAAAAUAAAAjAAAAAAAAAAUAAAAjAAEAAAAAAAUAAAAjAAwAAAAAAAUAAAAjAA0AAAAAAAUAAAAkAAAAAAAAAAUAAAAkAAEAAAAAAAUAAAAkAAwAAAAAAAUAAAAkAA0AAAAAAAUAAAAlAAAAAAAAAAUAAAAlAAEAAAAAAAUAAAAlAAwAAAAAAAUAAAAlAA0AAAAAAAUAAAAmAAAAAAAAAAUAAAAmAAEAAAAAAAUAAAAmAAwAAAAAAAUAAAAmAA0AAAAAAAUAAAAnAAAAAAAAAAUAAAAnAAEAAAAAAAUAAAAnAAwAAAAAAAUAAAAnAA0AAAAAAAUAAAAoAAAAAAAAAAUAAAAoAAEAAAAAAAUAAAAoAAwAAAAAAAUAAAAoAA0AAAAAAAUAAAApAAAAAAAAAAUAAAApAAEAAAAAAAUAAAApAAwAAAAAAAUAAAApAA0AAAAAAAUAAAAqAAAAAAAAAAUAAAAqAAEAAAAAAAUAAAAqAAwAAAAAAAUAAAAqAA0AAAAAAAUAAAArAAAAAAAAAAUAAAArAAEAAAAAAAUAAAArAAwAAAAAAAUAAAArAA0AAAAAAAUAAAAsAAAAAAAAAAUAAAAsAAEAAAAAAAUAAAAsAAwAAAAAAAUAAAAsAA0AAAAAAAUAAAAtAAAAAAAAAAUAAAAtAAEAAAAAAAUAAAAtAAwAAAAAAAUAAAAtAA0AAAAAAAUAAAAuAAAAAAAAAAUAAAAuAAEAAAAAAAUAAAAuAAwAAAAAAAUAAAAuAA0AAAAAAAUAAAAvAAAAAAAAAAUAAAAvAAEAAAAAAAUAAAAvAAIAAAAAAAUAAAAvAAMAAAAAAAUAAAAvAAQAAAAAAAUAAAAvAAUAAAAAAAUAAAAvAAYAAAAAAAUAAAAvAAcAAAAAAAUAAAAvAAgAAAAAAAUAAAAvAAkAAAAAAAUAAAAvAAoAAAAAAAUAAAAvAAsAAAAAAAUAAAAvAAwAAAAAAAUAAAAvAA0AAAAAAAUAAAAwAAAAAAAAAAUAAAAwAAEAAAAAAAUAAAAwAAIAAAAAAAUAAAAwAAMAAAAAAAUAAAAwAAQAAAAAAAUAAAAwAAUAAAAAAAUAAAAwAAYAAAAAAAUAAAAwAAcAAAAAAAUAAAAwAAgAAAAAAAUAAAAwAAkAAAAAAAUAAAAwAAoAAAAAAAUAAAAwAAsAAAAAAAUAAAAwAAwAAAAAAAUAAAAwAA0AAAAAAAUAAAAAAA4AAAAAAAUAAAAAAA8AAAAAAAUAAAAAABAAAAAAAAUAAAAAABEAAAAAAAUAAAAAABIAAAAAAAUAAAAAABMAAAAAAAUAAAAAABQAAAAAAAUAAAAAABUAAAAAAAUAAAAAABYAAAAAAAUAAAAAABcAAAAAAAUAAAAAABgAAAAAAAUAAAAAABkAAAAAAAUAAAAAABoAAAAAAAUAAAAAABsAAAAAAAUAAAABAA4AAAAAAAUAAAACAA4AAAAAAAUAAAADAA4AAAAAAAUAAAAEAA4AAAAAAAUAAAAFAA4AAAAAAAUAAAAGAA4AAAAAAAUAAAAHAA4AAAAAAAUAAAAIAA4AAAAAAAUAAAAJAA4AAAAAAAUAAAAOAA4AAAAAAAUAAAAPAA4AAAAAAAUAAAAQAA4AAAAAAAUAAAARAA4AAAAAAAUAAAASAA4AAAAAAAUAAAATAA4AAAAAAAUAAAAUAA4AAAAAAAUAAAAVAA4AAAAAAAUAAAAWAA4AAAAAAAUAAAAXAA4AAAAAAAUAAAAXAA8AAAAAAAUAAAAXABAAAAAAAAUAAAAXABEAAAAAAAUAAAAXABIAAAAAAAUAAAAXABMAAAAAAAUAAAAXABQAAAAAAAUAAAAXABUAAAAAAAUAAAAXABoAAAAAAAUAAAAXABsAAAAAAAUAAAAYAA4AAAAAAAUAAAAYAA8AAAAAAAUAAAAYABAAAAAAAAUAAAAYABEAAAAAAAUAAAAYABIAAAAAAAUAAAAYABMAAAAAAAUAAAAYABQAAAAAAAUAAAAYABUAAAAAAAUAAAAYABoAAAAAAAUAAAAYABsAAAAAAAUAAAAZAA4AAAAAAAUAAAAZABoAAAAAAAUAAAAZABsAAAAAAAUAAAAaAA4AAAAAAAUAAAAaABoAAAAAAAUAAAAaABsAAAAAAAUAAAAbAA4AAAAAAAUAAAAbABoAAAAAAAUAAAAbABsAAAAAAAUAAAAcAA4AAAAAAAUAAAAcABoAAAAAAAUAAAAcABsAAAAAAAUAAAAdAA4AAAAAAAUAAAAdABoAAAAAAAUAAAAdABsAAAAAAAUAAAAeAA4AAAAAAAUAAAAeABoAAAAAAAUAAAAeABsAAAAAAAUAAAAfAA4AAAAAAAUAAAAfABoAAAAAAAUAAAAfABsAAAAAAAUAAAAgAA4AAAAAAAUAAAAgABoAAAAAAAUAAAAgABsAAAAAAAUAAAAhAA4AAAAAAAUAAAAhABoAAAAAAAUAAAAhABsAAAAAAAUAAAAiAA4AAAAAAAUAAAAiABoAAAAAAAUAAAAiABsAAAAAAAUAAAAjAA4AAAAAAAUAAAAjABoAAAAAAAUAAAAjABsAAAAAAAUAAAAkAA4AAAAAAAUAAAAkABoAAAAAAAUAAAAkABsAAAAAAAUAAAAlAA4AAAAAAAUAAAAlABoAAAAAAAUAAAAlABsAAAAAAAUAAAAmAA4AAAAAAAUAAAAmABoAAAAAAAUAAAAmABsAAAAAAAUAAAAnAA4AAAAAAAUAAAAnABoAAAAAAAUAAAAnABsAAAAAAAUAAAAoAA4AAAAAAAUAAAAoABoAAAAAAAUAAAAoABsAAAAAAAUAAAApAA4AAAAAAAUAAAApABoAAAAAAAUAAAApABsAAAAAAAUAAAAqAA4AAAAAAAUAAAAqABoAAAAAAAUAAAAqABsAAAAAAAUAAAArAA4AAAAAAAUAAAArABoAAAAAAAUAAAArABsAAAAAAAUAAAAsAA4AAAAAAAUAAAAsABoAAAAAAAUAAAAsABsAAAAAAAUAAAAtAA4AAAAAAAUAAAAtABoAAAAAAAUAAAAtABsAAAAAAAUAAAAuAA4AAAAAAAUAAAAuABoAAAAAAAUAAAAuABsAAAAAAAUAAAAvAA4AAAAAAAUAAAAvABoAAAAAAAUAAAAvABsAAAAAAAUAAAAwAA4AAAAAAAUAAAAwAA8AAAAAAAUAAAAwABAAAAAAAAUAAAAwABEAAAAAAAUAAAAwABIAAAAAAAUAAAAwABMAAAAAAAUAAAAwABQAAAAAAAUAAAAwABUAAAAAAAUAAAAwABYAAAAAAAUAAAAwABcAAAAAAAUAAAAwABgAAAAAAAUAAAAwABkAAAAAAAUAAAAwABoAAAAAAAUAAAAwABsAAAAAAAUAAAACACkAAAAAAAUAAAADACkAAAAAAAUAAAAEACkAAAAAAAUAAAAFACkAAAAAAAUAAAAGACkAAAAAAAUAAAAHACkAAAAAAAUAAAAIACkAAAAAAAUAAAAJACkAAAAAAAUAAAAKACkAAAAAAAUAAAALACkAAAAAAAUAAAAMACkAAAAAAAUAAAANACkAAAAAAAUAAAAOACkAAAAAAAUAAAAPACkAAAAAAAUAAAAQACkAAAAAAAUAAAARACkAAAAAAAUAAAASACkAAAAAAAUAAAATACkAAAAAAAUAAAAUACkAAAAAAAUAAAAVACkAAAAAAAUAAAAVACgAAAAAAAUAAAAUACgAAAAAAAUAAAATACgAAAAAAAUAAAASACgAAAAAAAUAAAARACgAAAAAAAUAAAAQACgAAAAAAAUAAAAPACgAAAAAAAUAAAAOACgAAAAAAAUAAAANACgAAAAAAAUAAAAMACgAAAAAAAUAAAALACgAAAAAAAUAAAAKACgAAAAAAAUAAAAJACgAAAAAAAUAAAAIACgAAAAAAAUAAAAHACgAAAAAAAUAAAAGACgAAAAAAAUAAAAFACgAAAAAAAUAAAAEACgAAAAAAAUAAAADACgAAAAAAAUAAAACACgAAAAAAAUAAAACACcAAAAAAAUAAAADACcAAAAAAAUAAAAEACcAAAAAAAUAAAAFACcAAAAAAAUAAAAGACcAAAAAAAUAAAAHACcAAAAAAAUAAAAIACcAAAAAAAUAAAAJACcAAAAAAAUAAAAKACcAAAAAAAUAAAALACcAAAAAAAUAAAAMACcAAAAAAAUAAAANACcAAAAAAAUAAAAOACcAAAAAAAUAAAAPACcAAAAAAAUAAAAQACcAAAAAAAUAAAARACcAAAAAAAUAAAASACcAAAAAAAUAAAATACcAAAAAAAUAAAAUACcAAAAAAAUAAAAVACcAAAAAAAUAAAAYABkAAAAAAAUAAAAYABgAAAAAAAUAAAAYABcAAAAAAAUAAAAXABcAAAAAAAUAAAAXABYAAAAAAAUAAAAYABYAAAAAAAUAAAAXABgAAAAAAAUAAAAXABkAAAAAAAUAAAAMAA4AAAAAAAUAAAALAA4AAAAAAAUAAAAKAA4AAAAAAAUAAAAKAA0AAAAAAAUAAAALAA0AAAAAAAUAAAAMAA0AAAAAAAUAAAAMAAwAAAAAAAUAAAALAAwAAAAAAAUAAAAKAAwAAAAAAAUAAAANAAwAAAAAAAUAAAANAA0AAAAAAAUAAAANAA4AAAAAAAUAAAAXAAsAAAAAAAUAAAAXAAoAAAAAAAUAAAAXAAkAAAAAAAUAAAAXAAgAAAAAAAUAAAAWAAkAAAAAAAUAAAAWAAoAAAAAAAUAAAAWAAsAAAAAAAUAAAAWAAgAAAAAAAUAAAAWAAcAAAAAAAUAAAAWAAYAAAAAAAUAAAAWAAUAAAAAAAUAAAAWAAQAAAAAAAUAAAAWAAMAAAAAAAUAAAAWAAIAAAAAAAUAAAACAAsAAAAAAAUAAAACAAoAAAAAAAUAAAACAAkAAAAAAAUAAAACAAgAAAAAAAUAAAACAAcAAAAAAAUAAAACAAYAAAAAAAUAAAACAAUAAAAAAAUAAAACAAQAAAAAAAUAAAACAAMAAAAAAAUAAAACAAIAAAAAAAUAAAAVAAsAAAAAAAUAAAAVAAoAAAAAAAUAAAAVAAkAAAAAAAUAAAAVAAgAAAAAAAUAAAAVAAcAAAAAAAUAAAAVAAYAAAAAAAUAAAAVAAUAAAAAAAUAAAAVAAQAAAAAAAUAAAAVAAMAAAAAAAUAAAAVAAIAAAAAAAUAAAADAAIAAAAAAAUAAAAEAAIAAAAAAAUAAAAFAAIAAAAAAAUAAAAGAAIAAAAAAAUAAAAHAAIAAAAAAAUAAAAIAAIAAAAAAAUAAAAJAAIAAAAAAAUAAAAKAAIAAAAAAAUAAAALAAIAAAAAAAUAAAAMAAIAAAAAAAUAAAANAAIAAAAAAAUAAAAOAAIAAAAAAAUAAAAPAAIAAAAAAAUAAAAUAAIAAAAAAAUAAAATAAIAAAAAAAUAAAASAAIAAAAAAAUAAAARAAIAAAAAAAUAAAAQAAIAAAAAAAUAAAAYACkAAAAAAAUAAAAZACkAAAAAAAUAAAAaACkAAAAAAAUAAAAbACkAAAAAAAUAAAAcACkAAAAAAAUAAAAdACkAAAAAAAUAAAAeACkAAAAAAAUAAAAfACkAAAAAAAUAAAAgACkAAAAAAAUAAAAhACkAAAAAAAUAAAAiACkAAAAAAAUAAAAjACkAAAAAAAUAAAAkACkAAAAAAAUAAAAlACkAAAAAAAUAAAAmACkAAAAAAAUAAAAnACkAAAAAAAUAAAAoACkAAAAAAAUAAAApACkAAAAAAAUAAAAqACkAAAAAAAUAAAArACkAAAAAAAUAAAAsACkAAAAAAAUAAAAtACkAAAAAAAUAAAAuACkAAAAAAAUAAAAvACkAAAAAAAUAAAAwACkAAAAAAAUAAAAxACkAAAAAAAUAAAAyACkAAAAAAAUAAAAzACkAAAAAAAUAAAA0ACkAAAAAAAUAAAA1ACkAAAAAAAUAAAA2ACkAAAAAAAUAAAA3ACkAAAAAAAUAAAA4ACkAAAAAAAUAAAA5ACkAAAAAAAUAAAA6ACkAAAAAAAUAAAA7ACkAAAAAAAUAAAA8ACkAAAAAAAUAAAA9ACkAAAAAAAUAAAA+ACkAAAAAAAUAAAA/ACkAAAAAAAUAAABAACkAAAAAAAUAAABBACkAAAAAAAUAAABCACkAAAAAAAUAAABDACkAAAAAAAUAAABEACkAAAAAAAUAAABFACkAAAAAAAUAAABGACkAAAAAAAUAAABHACkAAAAAAAUAAAAvACgAAAAAAAUAAAAvACcAAAAAAAUAAAAwACcAAAAAAAUAAAAwACYAAAAAAAUAAAAwACUAAAAAAAUAAAAvACUAAAAAAAUAAAAvACQAAAAAAAUAAAAvACMAAAAAAAUAAAAvABwAAAAAAAUAAAAvAB0AAAAAAAUAAAAvAB4AAAAAAAUAAAAwAB4AAAAAAAUAAAAwAB8AAAAAAAUAAAAwACAAAAAAAAUAAAAwACEAAAAAAAUAAAAwACIAAAAAAAUAAAAwACMAAAAAAAUAAAAwACQAAAAAAAUAAAAvACYAAAAAAAUAAAAvACIAAAAAAAUAAAAvACEAAAAAAAUAAAAvACAAAAAAAAUAAAAvAB8AAAAAAAUAAAAwABwAAAAAAAUAAAAwAB0AAAAAAAUAAAAwACgAAAAAAAUAAAAvABkAAAAAAAUAAAAvABgAAAAAAAUAAAAvABcAAAAAAAUAAAAvABYAAAAAAAUAAAAvABUAAAAAAAUAAAAvABQAAAAAAAUAAAAvABMAAAAAAAUAAAAvABIAAAAAAAUAAAAvABEAAAAAAAUAAAAvABAAAAAAAAUAAAAvAA8AAAAAAAUAAAAxAA0AAAAAAAUAAAAyAA0AAAAAAAUAAAAzAA0AAAAAAAUAAAA0AA0AAAAAAAUAAAA1AA0AAAAAAAUAAAA2AA0AAAAAAAUAAAA3AA0AAAAAAAUAAAA4AA0AAAAAAAUAAAA5AA0AAAAAAAUAAAA6AA0AAAAAAAUAAAA7AA0AAAAAAAUAAAA8AA0AAAAAAAUAAAA9AA0AAAAAAAUAAAA+AA0AAAAAAAUAAAA/AA0AAAAAAAUAAABAAA0AAAAAAAUAAABBAA0AAAAAAAUAAABCAA0AAAAAAAUAAABDAA0AAAAAAAUAAABEAA0AAAAAAAUAAABFAA0AAAAAAAUAAABGAA0AAAAAAAUAAABHAA0AAAAAAAUAAABHAA4AAAAAAAUAAABGAA4AAAAAAAUAAABFAA4AAAAAAAUAAABEAA4AAAAAAAUAAABDAA4AAAAAAAUAAABCAA4AAAAAAAUAAABBAA4AAAAAAAUAAABAAA4AAAAAAAUAAAA/AA4AAAAAAAUAAAA+AA4AAAAAAAUAAAA9AA4AAAAAAAUAAAA8AA4AAAAAAAUAAAA7AA4AAAAAAAUAAAA6AA4AAAAAAAUAAAA5AA4AAAAAAAUAAAA4AA4AAAAAAAUAAAA3AA4AAAAAAAUAAAA2AA4AAAAAAAUAAAA1AA4AAAAAAAUAAAA0AA4AAAAAAAUAAAAzAA4AAAAAAAUAAAAyAA4AAAAAAAUAAAAxAA4AAAAAAAUAAABHACgAAAAAAAUAAABHACcAAAAAAAUAAABHACYAAAAAAAUAAABHACUAAAAAAAUAAABHABwAAAAAAAUAAABHABsAAAAAAAUAAABHABoAAAAAAAUAAABHABkAAAAAAAUAAABHABgAAAAAAAUAAABHABcAAAAAAAUAAABHABYAAAAAAAUAAABHABUAAAAAAAUAAABHABQAAAAAAAUAAABHABMAAAAAAAUAAABHABIAAAAAAAUAAABHABEAAAAAAAUAAABHABAAAAAAAAUAAABHAA8AAAAAAAUAAABHACMAAAAAAAUAAABHACQAAAAAAAUAAABHACIAAAAAAAUAAABHACEAAAAAAAUAAABHACAAAAAAAAUAAABHAB8AAAAAAAUAAABHAB4AAAAAAAUAAABHAB0AAAAAAAUAAAAxABoAAAAAAAUAAAAyABoAAAAAAAUAAAAzABoAAAAAAAUAAAA0ABoAAAAAAAUAAAA1ABoAAAAAAAUAAABCABoAAAAAAAUAAABDABoAAAAAAAUAAABEABoAAAAAAAUAAABFABoAAAAAAAUAAABGABoAAAAAAAUAAABGABsAAAAAAAUAAABFABsAAAAAAAUAAABEABsAAAAAAAUAAABDABsAAAAAAAUAAABCABsAAAAAAAUAAABBABsAAAAAAAUAAABAABsAAAAAAAUAAAA/ABoAAAAAAAUAAAA+ABoAAAAAAAUAAAA9ABoAAAAAAAUAAAA8ABoAAAAAAAUAAAA7ABoAAAAAAAUAAAA6ABoAAAAAAAUAAAA5ABoAAAAAAAUAAAA4ABoAAAAAAAUAAAA3ABoAAAAAAAUAAAA2ABoAAAAAAAUAAABAABoAAAAAAAUAAABBABoAAAAAAAUAAAA/ABsAAAAAAAUAAAA+ABsAAAAAAAUAAAA9ABsAAAAAAAUAAAA8ABsAAAAAAAUAAAA7ABsAAAAAAAUAAAA6ABsAAAAAAAUAAAA5ABsAAAAAAAUAAAA4ABsAAAAAAAUAAAA3ABsAAAAAAAUAAAA2ABsAAAAAAAUAAAA1ABsAAAAAAAUAAAA0ABsAAAAAAAUAAAAzABsAAAAAAAUAAAAyABsAAAAAAAUAAAAxABsAAAAAAAUAAAAxAAAAAAAAAAUAAAAyAAAAAAAAAAUAAAAzAAAAAAAAAAUAAAA0AAAAAAAAAAUAAAA1AAAAAAAAAAUAAAA2AAAAAAAAAAUAAAA3AAAAAAAAAAUAAAA4AAAAAAAAAAUAAAA5AAAAAAAAAAUAAAA6AAAAAAAAAAUAAAA7AAAAAAAAAAUAAAA8AAAAAAAAAAUAAAA9AAAAAAAAAAUAAAA+AAAAAAAAAAUAAAA/AAAAAAAAAAUAAABAAAAAAAAAAAUAAABBAAAAAAAAAAUAAABCAAAAAAAAAAUAAABDAAAAAAAAAAUAAABEAAAAAAAAAAUAAABFAAAAAAAAAAUAAABGAAAAAAAAAAUAAABHAAAAAAAAAAUAAABHAAEAAAAAAAUAAABHAAIAAAAAAAUAAABHAAMAAAAAAAUAAABHAAQAAAAAAAUAAABHAAUAAAAAAAUAAABHAAYAAAAAAAUAAABHAAcAAAAAAAUAAABHAAgAAAAAAAUAAABHAAkAAAAAAAUAAABHAAoAAAAAAAUAAABHAAsAAAAAAAUAAABHAAwAAAAAAAUAAAAYAAgAAAAAAAUAAAAYAAkAAAAAAAUAAAAYAAoAAAAAAAUAAAAYAAsAAAAAAAUAAAAZABkAAAAAAAUAAAAZABgAAAAAAAUAAAAZABcAAAAAAAUAAAAaABcAAAAAAAUAAAAaABgAAAAAAAUAAAAaABkAAAAAAAUAAAAaABIAAAAAAAUAAAAaABEAAAAAAAUAAAAZABEAAAAAAAUAAAAZABAAAAAAAAUAAAAZAA8AAAAAAAUAAAAaAA8AAAAAAAUAAAAaABAAAAAAAAUAAAAZABIAAAAAAAUAAAAuABIAAAAAAAUAAAAtABIAAAAAAAUAAAAtABEAAAAAAAUAAAAtABAAAAAAAAUAAAAtAA8AAAAAAAUAAAAuAA8AAAAAAAUAAAAuABAAAAAAAAUAAAAuABEAAAAAAAUAAAAuABkAAAAAAAUAAAAtABkAAAAAAAUAAAAtABgAAAAAAAUAAAAtABcAAAAAAAUAAAAuABcAAAAAAAUAAAAuABgAAAAAAAUAAAAbABYAAAAAAAUAAAAcABYAAAAAAAUAAAArABYAAAAAAAUAAAAsABYAAAAAAAUAAAAgABcAAAAAAAUAAAAhABcAAAAAAAUAAAAmABcAAAAAAAUAAAAnABcAAAAAAAUAAAAYACgAAAAAAAUAAAAYACcAAAAAAAUAAAAYACYAAAAAAAUAAAAYACUAAAAAAAUAAAAYACQAAAAAAAUAAAAYACMAAAAAAAUAAAAYACIAAAAAAAUAAAAYACEAAAAAAAUAAAAYACAAAAAAAAUAAAAYAB8AAAAAAAUAAAAYAB4AAAAAAAUAAAAYAB0AAAAAAAUAAAAYABwAAAAAAAUAAAAZABYAAAAAAAUAAAAaABYAAAAAAAUAAAAuABYAAAAAAAUAAAAtABYAAAAAAAUAAAAuABMAAAAAAAUAAAAtABMAAAAAAAUAAAAsABcAAAAAAAUAAAArABcAAAAAAAUAAAAsABIAAAAAAAUAAAArABIAAAAAAAUAAAArAA8AAAAAAAUAAAAsAA8AAAAAAAUAAAAnABQAAAAAAAUAAAAgABQAAAAAAAUAAAAdABIAAAAAAAUAAAAeABIAAAAAAAUAAAAiABIAAAAAAAUAAAAlABIAAAAAAAUAAAApABIAAAAAAAUAAAAqABIAAAAAAAUAAAABAA8AAAAAAAUAAAABABAAAAAAAAUAAAABABEAAAAAAAUAAAABABIAAAAAAAUAAAABABMAAAAAAAUAAAABABQAAAAAAAUAAAABABUAAAAAAAUAAAABABYAAAAAAAUAAAABABcAAAAAAAUAAAABABgAAAAAAAUAAAABABkAAAAAAAUAAAABABoAAAAAAAUAAAACAA8AAAAAAAUAAAACABAAAAACAAQAAAACABoAAAAAAAUAAAADAA8AAAAAAAUAAAADABAAAAACAAQAAAADABoAAAAAAAUAAAAEAA8AAAAAAAUAAAAEABAAAAACAAQAAAAEABoAAAAAAAUAAAAFAA8AAAAAAAUAAAAFABAAAAACAAQAAAAFABoAAAAAAAUAAAAGAA8AAAAAAAUAAAAGABAAAAACAAQAAAAGABoAAAAAAAUAAAAHAA8AAAAAAAUAAAAHABAAAAACAAQAAAAHABoAAAAAAAUAAAAIAA8AAAAAAAUAAAAIABAAAAACAAQAAAAIABoAAAAAAAUAAAAJAA8AAAAAAAUAAAAJABAAAAACAAQAAAAJABoAAAAAAAUAAAAKAA8AAAAAAAUAAAAKABAAAAACAAQAAAAKABoAAAAAAAUAAAALAA8AAAAAAAUAAAALABAAAAACAAQAAAALABoAAAAAAAUAAAAMAA8AAAAAAAUAAAAMABAAAAACAAQAAAAMABoAAAAAAAUAAAANAA8AAAAAAAUAAAANABAAAAACAAQAAAANABoAAAAAAAUAAAAOAA8AAAAAAAUAAAAOABAAAAACAAQAAAAOABoAAAAAAAUAAAAPAA8AAAAAAAUAAAAPABAAAAACAAQAAAAPABoAAAAAAAUAAAAQAA8AAAAAAAUAAAAQABAAAAACAAQAAAAQABoAAAAAAAUAAAARAA8AAAAAAAUAAAARABAAAAACAAQAAAARABoAAAAAAAUAAAASAA8AAAAAAAUAAAASABAAAAACAAQAAAASABoAAAAAAAUAAAATAA8AAAAAAAUAAAATABAAAAACAAQAAAATABoAAAAAAAUAAAAUAA8AAAAAAAUAAAAUABAAAAACAAQAAAAUABoAAAAAAAUAAAAVAA8AAAAAAAUAAAAVABAAAAACAAQAAAAVABoAAAAAAAUAAAAWAA8AAAAAAAUAAAAWABAAAAAAAAUAAAAWABEAAAAAAAUAAAAWABIAAAAAAAUAAAAWABMAAAAAAAUAAAAWABQAAAAAAAUAAAAWABUAAAAAAAUAAAAWABYAAAAAAAUAAAAWABcAAAAAAAUAAAAWABgAAAAAAAUAAAAWABkAAAAAAAUAAAAWABoAAAAAAAUAAAACABkAAAAEAAIAAAADABkAAAAEAAIAAAAEABkAAAAEAAIAAAAFABkAAAAEAAIAAAAGABkAAAAEAAIAAAAHABkAAAAEAAIAAAAIABkAAAAEAAIAAAAJABkAAAAEAAIAAAAKABkAAAAEAAIAAAALABkAAAAEAAIAAAAMABkAAAAEAAIAAAANABkAAAAEAAIAAAAOABkAAAAEAAIAAAAPABkAAAAEAAIAAAAQABkAAAAEAAIAAAARABkAAAAEAAIAAAASABkAAAAEAAIAAAATABkAAAAEAAIAAAAUABkAAAAEAAIAAAAVABkAAAAEAAIAAAABABsAAAAAAAUAAAACABsAAAAAAAUAAAADABsAAAAAAAUAAAAEABsAAAAAAAUAAAAFABsAAAAAAAUAAAAGABsAAAAAAAUAAAAHABsAAAAAAAUAAAAIABsAAAAAAAUAAAAJABsAAAAAAAUAAAAKABsAAAAAAAUAAAALABsAAAAAAAUAAAAMABsAAAAAAAUAAAANABsAAAAAAAUAAAAOABsAAAAAAAUAAAAPABsAAAAAAAUAAAAQABsAAAAAAAUAAAARABsAAAAAAAUAAAASABsAAAAAAAUAAAATABsAAAAAAAUAAAAUABsAAAAAAAUAAAAVABsAAAAAAAUAAAAWABsAAAAAAAUAAAAJAAUAAAAAAAUAAAAJAAQAAAAAAAUAAAAJAAMAAAAAAAUAAAAOAAUAAAAAAAUAAAAOAAMAAAAAAAUAAAAOAAQAAAAAAAUAAAAKAAUAAAAAAAUAAAALAAUAAAAAAAUAAAAMAAUAAAAAAAUAAAAMAAQAAAAAAAUAAAANAAQAAAAAAAUAAAANAAUAAAAAAAUAAAALAAQAAAAAAAUAAAAKAAQAAAAAAAUAAAAKAAMAAAAAAAUAAAANAAMAAAAAAAUAAAAMAAMAAAAAAAUAAAALAAMAAAAAAAUAAAAiABcAAAAAAAUAAAAlABcAAAAAAAUAAAAdABYAAAAAAAUAAAAqABYAAAAAAAUAAAA=")
tile_set = ExtResource("2_mckyc")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_2sjvs")
volume_db = -10.0
bus = &"Music"

[node name="StartPosition" parent="." instance=ExtResource("5_wjigj")]
position = Vector2(577, 352)

[node name="Water" type="Area2D" parent="."]
position = Vector2(2256, -432)
collision_layer = 14
collision_mask = 14
gravity_space_override = 3
gravity = 400.0

[node name="Water" type="CollisionShape2D" parent="Water"]
position = Vector2(-2058, 776)
shape = SubResource("RectangleShape2D_g2yds")
debug_color = Color(0, 0.6, 0.701961, 0.101961)

[node name="Spawner2" parent="." instance=ExtResource("6_10bhk")]
position = Vector2(280, 81)
type = 2

[node name="Spawner4" parent="." instance=ExtResource("6_10bhk")]
position = Vector2(301, 337)
type = 1

[node name="LayoutMap" type="Node2D" parent="."]
visible = false
scale = Vector2(24, 14)

[node name="Layout" type="TileMapLayer" parent="LayoutMap"]
position = Vector2(0, -16)
tile_map_data = PackedByteArray("AAAAAAMAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAEAAAAAAAAAAAABAAEAAAAAAAAAAAABAAIAAAAAAAAAAAABAAMAAAAAAAAAAAACAAMAAAAAAAAAAAACAAIAAAAAAAAAAAACAAEAAAAAAAAAAAA=")
tile_set = ExtResource("9_c1wtk")

[node name="Layout2" type="TileMapLayer" parent="LayoutMap"]
position = Vector2(0, -16)
tile_set = ExtResource("9_c1wtk")

[node name="Spike5" parent="." groups=["hurts"] instance=ExtResource("11_4ox8e")]
z_index = 1
position = Vector2(194, 264)
scale = Vector2(22, 1)
damage = 4

[node name="Ice" type="Area2D" parent="."]
collision_mask = 3

[node name="Ice" type="CollisionShape2D" parent="Ice"]
position = Vector2(193, 412)
shape = SubResource("RectangleShape2D_1x6wb")

[node name="Teleporter" parent="." instance=ExtResource("8_2jsra")]
position = Vector2(416, 336)
scrollY1 = 1
scrollY2 = 1
destinationX = 3
destinationY = 7

[node name="Teleporter2" parent="." instance=ExtResource("8_2jsra")]
position = Vector2(448, 272)
destinationX = 5
destinationY = 8

[node name="Teleporter3" parent="." instance=ExtResource("8_2jsra")]
position = Vector2(449, 400)
scrollY1 = 2
scrollY2 = 2
destinationX = 5
destinationY = 8

[node name="Teleporter4" parent="." instance=ExtResource("8_2jsra")]
position = Vector2(577, 400)
scrollX1 = 1
scrollX2 = 1
scrollY1 = 2
scrollY2 = 2
destinationX = 5
destinationY = 11

[node name="Teleporter5" parent="." instance=ExtResource("8_2jsra")]
position = Vector2(576, 272)
scrollX1 = 1
scrollX2 = 1
destinationX = 5
destinationY = 11

[connection signal="body_entered" from="Water" to="." method="_on_water_body_entered"]
[connection signal="body_exited" from="Water" to="." method="_on_water_body_exited"]
[connection signal="body_entered" from="Ice" to="." method="_on_ice_body_entered"]
[connection signal="body_exited" from="Ice" to="." method="_on_ice_body_exited"]
